--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /*_session/
-
+castlepass.db
 
 # Created by https://www.toptal.com/developers/gitignore/api/flask
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask
